--- a/Multiple_Variable_Soln.ipynb
+++ b/Multiple_Variable_Soln.ipynb
@@ -44,7 +44,7 @@
    "source": [
     "<a name=\"toc_15456_1.2\"></a>\n",
     "## 1.2 Tools\n",
-    "In this lab, we will make use of: \n",
+    " we will make use of: \n",
     "- NumPy, a popular library for scientific computing\n",
     "- Matplotlib, a popular library for plotting data"
    ],
