--- a/DeepL Algorithm/01_Neurons_and_Layers.ipynb
+++ b/DeepL Algorithm/01_Neurons_and_Layers.ipynb
@@ -6,7 +6,7 @@
     "tags": []
    },
    "source": [
-    "# Optional Lab - Neurons and Layers\n",
+    "# Neurons and Layers\n",
     "In this lab we will explore the inner workings of neurons/units and layers. In particular, the lab will draw parallels to the models you have mastered in Course 1, the regression/linear model and the logistic model. The lab will introduce Tensorflow and demonstrate how these models are implemented in that framework.\n",
     "<figure>\n",
     "   <img src=\"./images/C2_W1_NeuronsAndLayers.png\"  style=\"width:540px;height:200px;\" >\n",
@@ -530,7 +530,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Congratulations!\n",
+    "# \n",
     "You built a very simple neural network and have explored the similarities of a neuron to the linear and logistic regression from Course 1."
    ]
   },
